# PerfectMagicSquare

./: .gitignore  CMakeLists.txt  README.md
include/: generator.h  magic_square.h  program_options.h  tabulate.hpp
src/: CMakeLists.txt  magic_square.cpp  main.cpp  program_options.cpp
tests/: CMakeLists.txt  square_eight_test.cpp  square_five_test.cpp  square_four_test.cpp  square_nine_test.cpp  square_seven_test.cpp  square_six_test.cpp  square_three_test.cpp
